1-VPC.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: VPC Architecture

Parameters:
  CidrBlockValue:
    Type: "String"
    Default: 10.16.0.0/16
    Description: "Enter a subnet to split into twelve /20 subnets"
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref CidrBlockValue
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Join ["-", [!Ref AWS::StackName, VPC]]
  InternetGateway:
    Type: "AWS::EC2::InternetGateway"
    Properties:
      Tags:
        - Key: Name
          Value: !Join ["-", [!Ref AWS::StackName, IGW]]
  InternetGatewayAttachment:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway
  RoutePublic:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Join ["-", [!Ref AWS::StackName, route-public]]
  RoutePublicDefaultIPv4:
    Type: "AWS::EC2::Route"
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId:
        Ref: RoutePublic
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId:
        Ref: InternetGateway
  RouteAssociationPublicA:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId: !Ref SubnetPublicA
      RouteTableId:
        Ref: RoutePublic
  RouteAssociationPublicB:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId: !Ref SubnetPublicB
      RouteTableId:
        Ref: RoutePublic
  RouteAssociationPublicC:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId: !Ref SubnetPublicC
      RouteTableId:
        Ref: RoutePublic
  EIPA:
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc
  EIPB:
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc
  EIPC:
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc
  NatGatewayA:
    Type: 'AWS::EC2::NatGateway'
    Properties:
      AllocationId: !GetAtt EIPA.AllocationId
      SubnetId: !Ref SubnetPublicA
  NatGatewayB:
    Type: 'AWS::EC2::NatGateway'
    Properties:
      AllocationId: !GetAtt EIPB.AllocationId
      SubnetId: !Ref SubnetPublicB
  NatGatewayC:
    Type: 'AWS::EC2::NatGateway'
    Properties:
      AllocationId: !GetAtt EIPC.AllocationId
      SubnetId: !Ref SubnetPublicC
  RouteTablePrivateA: 
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: skyelp-rt-privateA
  RouteTablePrivateB: 
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: skyelp-rt-privateB
  RouteTablePrivateC: 
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: skyelp-rt-privateC
  RouteNatGWA: 
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref RouteTablePrivateA
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref NatGatewayA
  RouteNatGWB: 
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref RouteTablePrivateB
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref NatGatewayB
  RouteNatGWC: 
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref RouteTablePrivateC
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref NatGatewayC
  RouteTableAssociationAppA:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref SubnetAppA
      RouteTableId: !Ref RouteTablePrivateA
  RouteTableAssociationAppB:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref SubnetAppB
      RouteTableId: !Ref RouteTablePrivateB
  RouteTableAssociationAppC:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref SubnetAppC
      RouteTableId: !Ref RouteTablePrivateC
  RouteTableAssociationReservedA:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref SubnetReservedA
      RouteTableId: !Ref RouteTablePrivateA
  RouteTableAssociationReservedB:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref SubnetReservedB
      RouteTableId: !Ref RouteTablePrivateB
  RouteTableAssociationReservedC:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref SubnetReservedC
      RouteTableId: !Ref RouteTablePrivateC
  SubnetPublicA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Select ["0", !Cidr [!GetAtt VPC.CidrBlock, "12", "12"]]
      AvailabilityZone: !Select [0, !GetAZs ""]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Join ["-", [!Ref AWS::StackName, sn-public-A]]
  SubnetPublicB:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Select ["1", !Cidr [!GetAtt VPC.CidrBlock, "12", "12"]]
      AvailabilityZone: !Select [1, !GetAZs ""]
      MapPublicIpOnLaunch: true
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Join ["-", [!Ref AWS::StackName, sn-public-B]]
  SubnetPublicC:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Select ["2", !Cidr [!GetAtt VPC.CidrBlock, "12", "12"]]
      AvailabilityZone: !Select [2, !GetAZs ""]
      MapPublicIpOnLaunch: true
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Join ["-", [!Ref AWS::StackName, sn-public-C]]
  SubnetAppA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Select ["3", !Cidr [!GetAtt VPC.CidrBlock, "12", "12"]]
      AvailabilityZone: !Select [0, !GetAZs ""]
      Tags:
        - Key: Name
          Value: !Join ["-", [!Ref AWS::StackName, sn-app-A]]
  SubnetAppB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Select ["4", !Cidr [!GetAtt VPC.CidrBlock, "12", "12"]]
      AvailabilityZone: !Select [1, !GetAZs ""]
      Tags:
        - Key: Name
          Value: !Join ["-", [!Ref AWS::StackName, sn-app-B]]
  SubnetAppC:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Select ["5", !Cidr [!GetAtt VPC.CidrBlock, "12", "12"]]
      AvailabilityZone: !Select [2, !GetAZs ""]
      Tags:
        - Key: Name
          Value: !Join ["-", [!Ref AWS::StackName, sn-app-C]]
  SubnetDataA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Select ["6", !Cidr [!GetAtt VPC.CidrBlock, "12", "12"]]
      AvailabilityZone: !Select [0, !GetAZs ""]
      Tags:
        - Key: Name
          Value: !Join ["-", [!Ref AWS::StackName, sn-db-A]]
  SubnetDataB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Select ["7", !Cidr [!GetAtt VPC.CidrBlock, "12", "12"]]
      AvailabilityZone: !Select [1, !GetAZs ""]
      Tags:
        - Key: Name
          Value: !Join ["-", [!Ref AWS::StackName, sn-db-B]]
  SubnetDataC:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Select ["8", !Cidr [!GetAtt VPC.CidrBlock, "12", "12"]]
      AvailabilityZone: !Select [2, !GetAZs ""]
      Tags:
        - Key: Name
          Value: !Join ["-", [!Ref AWS::StackName, sn-db-C]]
  SubnetReservedA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Select ["9", !Cidr [!GetAtt VPC.CidrBlock, "12", "12"]]
      AvailabilityZone: !Select [0, !GetAZs ""]
      Tags:
        - Key: Name
          Value: !Join ["-", [!Ref AWS::StackName, sn-reserved-A]]
  SubnetReservedB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Select ["10", !Cidr [!GetAtt VPC.CidrBlock, "12", "12"]]
      AvailabilityZone: !Select [1, !GetAZs ""]
      Tags:
        - Key: Name
          Value: !Join ["-", [!Ref AWS::StackName, sn-reserved-B]]
  SubnetReservedC:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Select ["11", !Cidr [!GetAtt VPC.CidrBlock, "12", "12"]]
      AvailabilityZone: !Select [2, !GetAZs ""]
      Tags:
        - Key: Name
          Value: !Join ["-", [!Ref AWS::StackName, sn-reserved-C]]
Outputs:
  exportVPC:
    Description: "Export VPC ID"
    Value: !Ref VPC
    Export:
      Name: skyelp-vpc-id
  exportSubnetPublicA:
    Description: "Export Public Subnet A"
    Value: !Ref SubnetPublicA
    Export:
      Name: skyelp-subnetpublic-a
  exportSubnetPublicB:
    Description: "Export Public Subnet B"
    Value: !Ref SubnetPublicB
    Export:
      Name: skyelp-subnetpublic-b
  exportSubnetPublicC:
    Description: "Export Public Subnet C"
    Value: !Ref SubnetPublicC
    Export:
      Name: skyelp-subnetpublic-c
  exportSubnetAppA:
    Description: "Export App Subnet A"
    Value: !Ref SubnetAppA
    Export:
      Name: skyelp-subnetapp-a
  exportSubnetAppB:
    Description: "Export App Subnet B"
    Value: !Ref SubnetAppB
    Export:
      Name: skyelp-subnetapp-b
  exportSubnetAppC:
    Description: "Export App Subnet C"
    Value: !Ref SubnetAppC
    Export:
      Name: skyelp-subnetapp-c
  exportSubnetDataA:
    Description: "Export Data Subnet A"
    Value: !Ref SubnetDataA
    Export:
      Name: skyelp-subnetdata-a
  exportSubnetDataB:
    Description: "Export Data Subnet B"
    Value: !Ref SubnetDataB
    Export:
      Name: skyelp-subnetdata-b
  exportSubnetDataC:
    Description: "Export Data Subnet C"
    Value: !Ref SubnetDataC
    Export:
      Name: skyelp-subnetdata-c
  exportSubnetReservedA:
    Description: "Export Reserved Subnet A"
    Value: !Ref SubnetReservedA
    Export:
      Name: skyelp-subnetreserved-a
  exportSubnetReservedB:
    Description: "Export Reserved Subnet B"
    Value: !Ref SubnetReservedB
    Export:
      Name: skyelp-subnetreserved-b
  exportSubnetReservedC:
    Description: "Export Reserved Subnet C"
    Value: !Ref SubnetReservedC
    Export:
      Name: skyelp-subnetreserved-c
